# coding: utf-8
# This file is managed by 'repo_helper'. Don't edit it directly.

[metadata]
name = pyms-nist-search
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU Lesser General Public License v3 or later (LGPLv3+)
keywords =

long_description = file: README.rst
long_description_content_type = text/x-rst
platforms =
    Windows
    Linux
url = https://github.com/domdfcoding/pynist
project_urls =
    Documentation = https://pynist.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/pynist/issues
    Source_Code = https://github.com/domdfcoding/pynist
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 7
    Operating System :: Microsoft :: Windows :: Windows 8.1
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities



[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:


[options.packages.find]
exclude =
    tests
    tests.*
    doc-source
